major UI overhaul

--- a/templates/src/components/Header.astro
+++ b/templates/src/components/Header.astro
@@ -357,7 +357,7 @@ if (hasShopify) {
 }
 
 {
-  hasShopify && (
+  !isStoryKeep && hasShopify && (
     <>
       <ShopifyCartManager resources={shopifyResources} client:only="react" />
       <CartModal client:only="react" />
